--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/dependency-injection": "^6.2",
         "symfony/config": "^6.2",
         "symfony/http-kernel": "^6.2",
-        "symfony/yaml": "^6.2"
+        "symfony/yaml": "^6.2",
+        "phpunit/phpunit": "^10"
     }
 }
