--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -8,5 +8,7 @@ services:
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     DanHariton\DataBoxes\Service\DataBox: ~
+    DanHariton\DataBoxes\Api\SeznamClient: ~
 
     DanHariton\DataBoxes\Service\DataBoxInterface: '@DanHariton\DataBoxes\Service\DataBox'
+    DanHariton\DataBoxes\Service\SeznamClientInterface: '@DanHariton\DataBoxes\Api\SeznamClient'
